parser/src/parser/snapshots/parser__parser__imports__tests__parse_import_with_multiple_segments.snap
---
source: parser/src/parser/imports.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 21)
  IMPORT_DEF@[0; 21)
    IMPORT_KW@[0; 6) "import"
    WHITESPACE@[6; 7) " "
    IMPORT_SEGMENT@[7; 10)
      NAME@[7; 10)
        IDENT@[7; 10) "foo"
    COLON_COLON@[10; 12) "::"
    IMPORT_SEGMENT@[12; 15)
      NAME@[12; 15)
        IDENT@[12; 15) "bar"
    COLON_COLON@[15; 17) "::"
    IMPORT_SEGMENT@[17; 20)
      NAME@[17; 20)
        IDENT@[17; 20) "baz"
    SEMI@[20; 21) ";"

